--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=PRODUCTION MONGO_USER=mohammadali  MONGO_PASS=20212021 MONGO_DB=auth node app.js",
+    "start": "node app.js",
     "start-server": "node app.js",
     "dev": "nodemon app.js"
   },
